yayayay im done

--- a/paper/main.bib
+++ b/paper/main.bib
@@ -1,10 +1,7 @@
-@article{Cui1,
-    author = {Cui, Tianhong},
-    title = {Research: The First {S}cience {P}artner {J}ournal},
-    journal = {Research},
-    volume = {2018},
-    pages = {1},
-    DOI = {10.1155/2018/1340806},
-    year = {2018},
-    type = {Journal Article}
+@online{Tedrake,
+    author = {Tedrake, Russ},
+    title = {Robotic Manipulation Chapter 6: Motion Planning},
+    url = {https://manipulation.csail.mit.edu/trajectories.html#section2},
+    year = {2023},
+    urldate = {2023-12-08}
 }
